dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
    environment: dev
    app.kubernetes.io/part-of: opsgpt
